# structures/module.go
@@ -2,7 +2,11 @@ package structures
 
 import "github.com/maple-tech/core/types"
 
+// swagger:parameters Localization_Module
 type Module struct {
+	// in:body
+	// The INT of a thing
+	// example: 1
 	Id          int        `json:"id"`
 	Name        string     `json:"name"`
 	Description types.JSON `json:"description"`
